k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trifid
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: gont-ch.zazukoians.org
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/redirect-regex: ^https?://www.gont.ch/(.*)
    traefik.ingress.kubernetes.io/redirect-replacement: https://gont.ch/$1
spec:
  tls:
  - secretName: gont-ch-cert
    hosts:
    - gont.ch
    - www.gont.ch
  rules:
  - host: gont.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: trifid
          servicePort: 80
  - host: www.gont.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: trifid
          servicePort: 80
